184: avoid deprecated newInstance
Task-Url: http://github.com/LorenzoBettini/edelta/issues/184